--- a/data/templates/data/home.html
+++ b/data/templates/data/home.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <div class="container">
-    <p>Hello world!</p>
+    <p>Hello, Tord! This is your very own web server.</p>
 </div>
 {% endblock content %}
