--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     {% load static %}
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
@@ -9,9 +12,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="content">
-        {% block content %}
-        {% endblock %}
+    <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="{% url 'home' %}" class="nav-link link-light">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'statistics' %}" class="nav-link link-light">Statistics</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <input class="form-control me-2" type="text" placeholder="Search">
+                    <button class="btn btn-primary" type="button">Search</button>
+                </form>
+            </div>
+        </nav>
+        <div class="container-fluid p-5">
+            {% block content %}
+            {% endblock %}
+        </div>
     </div>
 </body>
 </html>
