--- a/data/templates/data/home.html
+++ b/data/templates/data/home.html
@@ -3,7 +3,6 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-<div class="container">
-    <p>Hello, Tord! This is your very own web server. Hälsa mamma!</p>
-</div>
+<h2>Home</h2>
+<p>Hello, Tord! This is your very own web server. Hälsa mamma!</p>
 {% endblock content %}
