--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -5,6 +5,7 @@
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
+    {% load bootstrap_icons %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
@@ -15,6 +16,9 @@
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
+                <div style="background-color: #FFFFFF; z-index: 1000;">
+                {% bs_icon 'tencent-qq' size='2.5em' %}
+                </div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a href="{% url 'home' %}" class="nav-link link-light">Home</a>
