Added update.sh file to run after each git pull.

--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -16,7 +16,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container-fluid">
-                <div style="background-color: #FFFFFF; z-index: 1000;">
+                <div class="icon-container">
                 {% bs_icon 'tencent-qq' size='2.5em' %}
                 </div>
                 <ul class="navbar-nav">
