--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -38,5 +38,8 @@
             {% endblock %}
         </div>
     </div>
+    {% block js_include %}
+    {% endblock js_include %}
+    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
 </body>
 </html>
