--- a/data/templates/data/statistics.html
+++ b/data/templates/data/statistics.html
@@ -3,7 +3,7 @@
 {% block title %}Statistics{% endblock title %}
 
 {% block content %}
-<h2>Statistics</h2>
+<h2>Latest Temperatures</h2>
 <div class="temperature-table-container">
     <table class="table table-striped">
         <thead>
