Added point_diagram.html to show chart with latest 10 temperatures for a specific point.

--- a/data/templates/base.html
+++ b/data/templates/base.html
@@ -38,8 +38,10 @@
             {% endblock %}
         </div>
     </div>
+    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
     {% block js_include %}
     {% endblock js_include %}
-    <script src="https://unpkg.com/htmx.org@2.0.3"></script>
+    {% block js_code %}
+    {% endblock js_code %}
 </body>
 </html>
